# BasicGameEngine

./: .dockerignore  BasicGameEngine.sln  Dockerfile  README.md  smoke_test.ps1
.github/: copilot-instructions.md
BasicGameEngine/: BasicGameEngine.cpp  BasicGameEngine.h  BasicGameEngine.rc  BasicGameEngine.vcxproj  BasicGameEngine.vcxproj.filters  CMakeLists.txt  Dockerfile  Dockerfile.txt  Dockerfile_MSVC  InterprocessComm.cpp  InterprocessComm.h  InterprocessCommMgr.cpp  InterprocessCommMgr.h  RCa18080  Resource.h  SharedMemoryData.h  StatusBar.cpp  StatusBar.h  StatusBarMgr.cpp  StatusBarMgr.h  TaskBarMgr.cpp  UserPrivilege.h  UserPrivilegeMgr.cpp  UserPrivilegeMgr.h  WindowMutex.cpp  WindowMutex.h  WindowMutexMgr.cpp  WindowMutexMgr.h
BasicGameEngine/include/: BasicGameEngine.h  BasicGameRoleOperation.h  BgeGameModule.h  BgeScenePrimitives.h  DirectX11BouncingBallOperation.h  DirectX11BouncingBallRenderer.h  DirectX12BouncingBallRenderer.h  DirectXIncludes.h  InterprocessComm.h  InterprocessCommMgr.h  SharedMemoryData.h  StatusBar.h  TaskBarMgr.h  WindowMutex.h  WindowMutexMgr.h
BasicGameEngine/include/op/: OpNode.h  OpNodeMgr.h
BasicGameEngine/src/: AsteroidGameModule.cpp  BasicGameEngine.cpp  BgeScenePrimitives.cpp  DirectX11BouncingBallRenderer.cpp  DirectX12BouncingBallRenderer.cpp  InterprocessComm.cpp  InterprocessCommMgr.cpp  StatusBar.cpp  StatusBarMgr.cpp  TaskBarMgr.cpp  UserPrivilege.cpp  UserPrivilegeMgr.cpp  WindowMutex.cpp  WindowMutexMgr.cpp
BasicGameEngine/src/op/: IOperate.cpp  OpNode.cpp  OpNodeMgr.cpp
BasicGameEngine_UnitTest/: Logger.h  (+9 more)
(+24 files in other folders)
